devops-class-main/DevSecOps/k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-api
  namespace: session17
  labels:
    app: notes-api
spec:
  type: NodePort
  selector:
    app: notes-api
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30171
